main/java/com/grammar/ProjectGrammarParser.java
// Generated from ProjectGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProjectGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		ASSIGN=25, NEG=26, INT=27, BOOLEAN=28, GR=29, LO=30, GE=31, LE=32, EQ=33, 
		MUL=34, DIV=35, PLUS=36, MINUS=37, NUMBER=38, BOOL=39, CONST=40, VARIABLE=41, 
		NEWLINE=42, WS=43, BLOCKCOMMENT=44, LINECOMMENT=45;
	public static final int
		RULE_init = 0, RULE_stat = 1, RULE_block = 2, RULE_declaration = 3, RULE_retexpr = 4, 
		RULE_functionbody = 5, RULE_statement = 6, RULE_parameterlist = 7, RULE_parameterVar = 8, 
		RULE_parameter = 9, RULE_arrayslistFuncDecl = 10, RULE_arrayslist = 11, 
		RULE_ifstatement = 12, RULE_ifblock = 13, RULE_elseblock = 14, RULE_whilestatement = 15, 
		RULE_cyclebody = 16, RULE_expr = 17, RULE_assignexpression = 18, RULE_mathexpression = 19, 
		RULE_logicexpression = 20, RULE_mathoperand = 21, RULE_logicoperand = 22, 
		RULE_operand = 23, RULE_dimensions = 24, RULE_function = 25, RULE_arguments = 26, 
		RULE_writeintcontext = 27, RULE_writestrcontext = 28, RULE_charoperand = 29, 
		RULE_charoperandinlogic = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"init", "stat", "block", "declaration", "retexpr", "functionbody", "statement", 
			"parameterlist", "parameterVar", "parameter", "arrayslistFuncDecl", "arrayslist", 
			"ifstatement", "ifblock", "elseblock", "whilestatement", "cyclebody", 
			"expr", "assignexpression", "mathexpression", "logicexpression", "mathoperand", 
			"logicoperand", "operand", "dimensions", "function", "arguments", "writeintcontext", 
			"writestrcontext", "charoperand", "charoperandinlogic"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'writeint'", "'('", "')'", "';'", "'writestr'", "'writechar'", 
			"'writeline();'", "'{'", "'return'", "'}'", "','", "'char'", "'[]'", 
			"'['", "']'", "'if'", "'else'", "'while'", "'readint()'", "'readline()'", 
			"'readchar()'", "'(char)'", "'and'", "'or'", "'<-'", "'!'", "'int'", 
			"'bool'", "'>'", "'<'", "'>='", "'<='", "'='", "'*'", "'/'", "'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ASSIGN", "NEG", "INT", "BOOLEAN", "GR", "LO", "GE", "LE", "EQ", 
			"MUL", "DIV", "PLUS", "MINUS", "NUMBER", "BOOL", "CONST", "VARIABLE", 
			"NEWLINE", "WS", "BLOCKCOMMENT", "LINECOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProjectGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjectGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProjectGrammarParser.EOF, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__11) | (1L << T__15) | (1L << T__17) | (1L << T__21) | (1L << NEG) | (1L << INT) | (1L << BOOLEAN) | (1L << MINUS) | (1L << NUMBER) | (1L << BOOL) | (1L << CONST) | (1L << VARIABLE) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(62);
				stat();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ProjectGrammarParser.NEWLINE, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__4:
			case T__5:
			case T__6:
			case T__11:
			case T__15:
			case T__17:
			case T__21:
			case NEG:
			case INT:
			case BOOLEAN:
			case MINUS:
			case NUMBER:
			case BOOL:
			case CONST:
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				block();
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(71);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OutCharContext extends BlockContext {
		public CharoperandContext charoperand() {
			return getRuleContext(CharoperandContext.class,0);
		}
		public OutCharContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterOutChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitOutChar(this);
		}
	}
	public static class OutIntContext extends BlockContext {
		public WriteintcontextContext writeintcontext() {
			return getRuleContext(WriteintcontextContext.class,0);
		}
		public OutIntContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterOutInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitOutInt(this);
		}
	}
	public static class OutStrContext extends BlockContext {
		public WritestrcontextContext writestrcontext() {
			return getRuleContext(WritestrcontextContext.class,0);
		}
		public OutStrContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterOutStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitOutStr(this);
		}
	}
	public static class OutLineContext extends BlockContext {
		public OutLineContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterOutLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitOutLine(this);
		}
	}
	public static class DeclContext extends BlockContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DeclContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitDecl(this);
		}
	}
	public static class StatmContext extends BlockContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatmContext(BlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterStatm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitStatm(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
			case INT:
			case BOOLEAN:
				_localctx = new DeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				declaration();
				}
				break;
			case T__1:
			case T__15:
			case T__17:
			case T__21:
			case NEG:
			case MINUS:
			case NUMBER:
			case BOOL:
			case CONST:
			case VARIABLE:
				_localctx = new StatmContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				statement();
				}
				break;
			case T__0:
				_localctx = new OutIntContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(T__0);
				setState(80);
				match(T__1);
				setState(81);
				writeintcontext();
				setState(82);
				match(T__2);
				setState(83);
				match(T__3);
				}
				break;
			case T__4:
				_localctx = new OutStrContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				match(T__4);
				setState(86);
				match(T__1);
				setState(87);
				writestrcontext();
				setState(88);
				match(T__2);
				setState(89);
				match(T__3);
				}
				break;
			case T__5:
				_localctx = new OutCharContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				match(T__5);
				setState(92);
				match(T__1);
				setState(93);
				charoperand();
				setState(94);
				match(T__2);
				setState(95);
				match(T__3);
				}
				break;
			case T__6:
				_localctx = new OutLineContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(97);
				match(T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarDeclarationContext extends DeclarationContext {
		public ParameterVarContext parameterVar() {
			return getRuleContext(ParameterVarContext.class,0);
		}
		public VarDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitVarDeclaration(this);
		}
	}
	public static class FunctionDeclarationContext extends DeclarationContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public FunctionbodyContext functionbody() {
			return getRuleContext(FunctionbodyContext.class,0);
		}
		public RetexprContext retexpr() {
			return getRuleContext(RetexprContext.class,0);
		}
		public List<ArrayslistFuncDeclContext> arrayslistFuncDecl() {
			return getRuleContexts(ArrayslistFuncDeclContext.class);
		}
		public ArrayslistFuncDeclContext arrayslistFuncDecl(int i) {
			return getRuleContext(ArrayslistFuncDeclContext.class,i);
		}
		public ParameterlistContext parameterlist() {
			return getRuleContext(ParameterlistContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ProjectGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProjectGrammarParser.NEWLINE, i);
		}
		public FunctionDeclarationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new FunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				parameter();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__12) {
					{
					{
					setState(101);
					arrayslistFuncDecl();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(T__1);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT || _la==BOOLEAN) {
					{
					setState(108);
					parameterlist();
					}
				}

				setState(111);
				match(T__2);
				setState(112);
				match(T__7);
				setState(113);
				functionbody();
				setState(114);
				match(T__8);
				setState(115);
				retexpr();
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(116);
					match(NEWLINE);
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(122);
				match(T__9);
				}
				break;
			case 2:
				_localctx = new VarDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				parameterVar();
				setState(125);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetexprContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RetexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterRetexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitRetexpr(this);
		}
	}

	public final RetexprContext retexpr() throws RecognitionException {
		RetexprContext _localctx = new RetexprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_retexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			expr();
			setState(130);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionbodyContext extends ParserRuleContext {
		public FunctionbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionbody; }
	 
		public FunctionbodyContext() { }
		public void copyFrom(FunctionbodyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncBodyContext extends FunctionbodyContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public FuncBodyContext(FunctionbodyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterFuncBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitFuncBody(this);
		}
	}

	public final FunctionbodyContext functionbody() throws RecognitionException {
		FunctionbodyContext _localctx = new FunctionbodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionbody);
		int _la;
		try {
			_localctx = new FuncBodyContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__11) | (1L << T__15) | (1L << T__17) | (1L << T__21) | (1L << NEG) | (1L << INT) | (1L << BOOLEAN) | (1L << MINUS) | (1L << NUMBER) | (1L << BOOL) | (1L << CONST) | (1L << VARIABLE) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(132);
				stat();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatementContext extends StatementContext {
		public IfstatementContext ifstatement() {
			return getRuleContext(IfstatementContext.class,0);
		}
		public IfStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitIfStatement(this);
		}
	}
	public static class ExpressionContext extends StatementContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitExpression(this);
		}
	}
	public static class WhileStatementContext extends StatementContext {
		public WhilestatementContext whilestatement() {
			return getRuleContext(WhilestatementContext.class,0);
		}
		public WhileStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjectGrammarListener ) ((ProjectGrammarListener)listener).exitWhileStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				_localctx = new IfStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				ifstatement();
				}
				break;
			case T__17:
				_localctx = new WhileStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				whilestatement();
				}
				break;
			case T__1:
			case T__21:
			case NEG:
			case MINUS:
			case NUMBER:
			case BOOL:
			case CONST:
			case VARIABLE:
				_localctx = new ExpressionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				expr();
				setState(141);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
